added payment account php-doc
